Clear and fix solution

--- a/NSL.Node.BridgeLobbyClient/NSL.Node.BridgeLobbyClient.csproj
+++ b/NSL.Node.BridgeLobbyClient/NSL.Node.BridgeLobbyClient.csproj
@@ -9,10 +9,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\..\..\Core\BuilderExtensions\NSL.BuilderExtensions.SocketCore\NSL.BuilderExtensions.SocketCore.csproj" />
-		<ProjectReference Include="..\..\..\..\Core\Extensions\SocketCore.Extensions.Buffer\NSL.SocketCore.Extensions.Buffer.csproj" />
-		<ProjectReference Include="..\..\..\..\Core\NSL.SocketCore\NSL.SocketCore.csproj" />
-		<ProjectReference Include="..\..\..\..\Protocols\WebSockets\BuilderExtensions\NSL.BuilderExtensions.WebSocketsClient\NSL.BuilderExtensions.WebSocketsClient.csproj" />
+	  <PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.10.30.34" />
+	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.10.30.34" />
 	</ItemGroup>
 
 </Project>
