--- a/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
+++ b/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
@@ -21,13 +21,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\..\Base\NSL.Logger.AspNetCore\NSL.Logger.AspNetCore.csproj" />
-	  <ProjectReference Include="..\..\..\..\Core\BuilderExtensions\NSL.BuilderExtensions.SocketCore\NSL.BuilderExtensions.SocketCore.csproj" />
-	  <ProjectReference Include="..\..\..\..\Core\NSL.EndPointBuilder\NSL.EndPointBuilder.csproj" />
-	  <ProjectReference Include="..\..\..\..\Core\NSL.SocketClient\NSL.SocketClient.csproj" />
-	  <ProjectReference Include="..\..\..\..\Protocols\WebSockets\BuilderExtensions\NSL.BuilderExtensions.WebSocketsClient\NSL.BuilderExtensions.WebSocketsClient.csproj" />
-	  <ProjectReference Include="..\..\..\..\Protocols\WebSockets\BuilderExtensions\NSL.BuilderExtensions.WebSockets\NSL.BuilderExtensions.WebSockets.csproj" />
-	  <ProjectReference Include="..\..\..\..\Protocols\WebSockets\NSL.WebSockets.Client\NSL.WebSockets.Client.csproj" />
+	  <PackageReference Include="NSL.Logger.AspNetCore" Version="2022.10.30.34" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\NSL.Node.BridgeLobbyClient\NSL.Node.BridgeLobbyClient.csproj" />
 	</ItemGroup>
 </Project>
