--- a/NSL.Node.BridgeLobbyClient/NSL.Node.BridgeLobbyClient.csproj
+++ b/NSL.Node.BridgeLobbyClient/NSL.Node.BridgeLobbyClient.csproj
@@ -2,15 +2,37 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+		<Configurations>Debug;Release;UnityDebug;Unity</Configurations>
+		
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
+		<PackageId>$(MSBuildProjectName)_Debug</PackageId>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='UnityDebug'">
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='Unity'">
+		<TargetFramework>netstandard2.0</TargetFramework>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(Configuration)'=='Debug' or '$(Configuration)'=='Release'">
+	  <PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.10.30.1407" />
+	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.10.30.1407" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(Configuration)'=='UnityDebug' or '$(Configuration)'=='Unity'">
+	  <PackageReference Include="Unity.NSL.BuilderExtensions.SocketCore" Version="2022.10.30.1407" />
+	  <PackageReference Include="Unity.NSL.BuilderExtensions.WebSocketsClient" Version="2022.10.30.1407" />
+	</ItemGroup>
+
 	<ItemGroup>
-	  <PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.10.30.34" />
-	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.10.30.34" />
+	  <ProjectReference Include="..\NSL.Node.BridgeServer.Shared\NSL.Node.BridgeServer.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
