--- a/Examples/NSL.Node.LobbyServerExample.Shared/NSL.Node.LobbyServerExample.Shared.csproj
+++ b/Examples/NSL.Node.LobbyServerExample.Shared/NSL.Node.LobbyServerExample.Shared.csproj
@@ -2,11 +2,23 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+		<Configurations>Debug;Release;UnityDebug;Unity</Configurations>
+		
 		<Version>$(VersionSuffix)</Version>
-		<IsPackable>false</IsPackable>
 		<Authors>Relife87</Authors>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
+		<PackageId>$(MSBuildProjectName)_Debug</PackageId>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='UnityDebug'">
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='Unity'">
+		<TargetFramework>netstandard2.0</TargetFramework>
 	</PropertyGroup>
 
 </Project>
