--- a/NSL.Node.BridgeTransportClient/NSL.Node.BridgeTransportClient.csproj
+++ b/NSL.Node.BridgeTransportClient/NSL.Node.BridgeTransportClient.csproj
@@ -21,4 +21,14 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 	</PropertyGroup>
 
+	<ItemGroup Condition="'$(Configuration)'=='Debug' or '$(Configuration)'=='Release'">
+		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.10.30.1407" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.10.30.1407" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(Configuration)'=='UnityDebug' or '$(Configuration)'=='Unity'">
+		<PackageReference Include="Unity.NSL.BuilderExtensions.SocketCore" Version="2022.10.30.1407" />
+		<PackageReference Include="Unity.NSL.BuilderExtensions.WebSocketsClient" Version="2022.10.30.1407" />
+	</ItemGroup>
+
 </Project>
