--- a/NSL.Node.BridgeLobbyClient/NSL.Node.BridgeLobbyClient.csproj
+++ b/NSL.Node.BridgeLobbyClient/NSL.Node.BridgeLobbyClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -22,8 +22,8 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='Debug' or '$(Configuration)'=='Release'">
-	  <PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.11.4.2304" />
-	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.11.4.2304" />
+	  <PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.12.2.526" />
+	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.12.2.526" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='UnityDebug' or '$(Configuration)'=='Unity'">
