--- a/NSL.Node.BridgeTransportClient/NSL.Node.BridgeTransportClient.csproj
+++ b/NSL.Node.BridgeTransportClient/NSL.Node.BridgeTransportClient.csproj
@@ -22,13 +22,17 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='Debug' or '$(Configuration)'=='Release'">
-		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.11.4.2304" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.11.4.2304" />
+		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2022.12.2.526" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2022.12.2.526" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='UnityDebug' or '$(Configuration)'=='Unity'">
 		<PackageReference Include="Unity.NSL.BuilderExtensions.SocketCore" Version="2022.10.30.1407" />
 		<PackageReference Include="Unity.NSL.BuilderExtensions.WebSocketsClient" Version="2022.10.30.1407" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2022.12.2.526" />
 	</ItemGroup>
 
 	<ItemGroup>
