--- a/Examples/NSL.Node.BridgeTransportExample/NSL.Node.BridgeTransportExample.csproj
+++ b/Examples/NSL.Node.BridgeTransportExample/NSL.Node.BridgeTransportExample.csproj
@@ -1,20 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 
-  <ItemGroup>
-    <PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2022.12.2.526" />
-    <PackageReference Include="NSL.Logger" Version="2022.12.2.526" />
-    <PackageReference Include="NSL.UDP.Client" Version="2022.12.2.526" />
-  </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\NSL.Node.BridgeTransportClient\NSL.Node.BridgeTransportClient.csproj" />
-  </ItemGroup>
+		<Version>$(VersionSuffix)</Version>
+		<Authors>Relife87</Authors>
+
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2022.12.2.526" />
+		<PackageReference Include="NSL.Logger" Version="2022.12.2.526" />
+		<PackageReference Include="NSL.UDP.Client" Version="2022.12.2.526" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\NSL.Node.BridgeTransportClient\NSL.Node.BridgeTransportClient.csproj" />
+	</ItemGroup>
 
 </Project>
