--- a/Examples/NSL.Node.BridgeServerExample/NSL.Node.BridgeServerExample.csproj
+++ b/Examples/NSL.Node.BridgeServerExample/NSL.Node.BridgeServerExample.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+	  <Version>$(VersionSuffix)</Version>
+	  <Authors>Relife87</Authors>
   </PropertyGroup>
 
   <ItemGroup>
