--- a/Examples/NSL.Node.BridgeServerExample/NSL.Node.BridgeServerExample.csproj
+++ b/Examples/NSL.Node.BridgeServerExample/NSL.Node.BridgeServerExample.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\..\NSL.Node.BridgeServer\NSL.Node.BridgeServer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="configuration.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
