--- a/Examples/NSL.Node.RoomServerExample/NSL.Node.RoomServerExample.csproj
+++ b/Examples/NSL.Node.RoomServerExample/NSL.Node.RoomServerExample.csproj
@@ -20,8 +20,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\NSL.Node.BridgeTransportClient.Shared\NSL.Node.BridgeTransportClient.Shared.csproj" />
-		<ProjectReference Include="..\..\NSL.Node.BridgeTransportClient\NSL.Node.BridgeTransportClient.csproj" />
+		<ProjectReference Include="..\..\NSL.Node.RoomServer.Shared\NSL.Node.RoomServer.Shared.csproj" />
+		<ProjectReference Include="..\..\NSL.Node.RoomServer\NSL.Node.RoomServer.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="configuration.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
