--- a/NSL.Node.RoomServer/NSL.Node.RoomServer.csproj
+++ b/NSL.Node.RoomServer/NSL.Node.RoomServer.csproj
@@ -36,8 +36,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2023.2.5.1332" />
+	  <PackageReference Include="NSL.Logger" Version="2023.2.5.1332" />
+	  <PackageReference Include="NSL.UDP.Client" Version="2023.2.5.1332" />
+	  <PackageReference Include="STUN" Version="0.5.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\NSL.Node.BridgeServer.Shared\NSL.Node.BridgeServer.Shared.csproj" />
-		<ProjectReference Include="..\NSL.Node.BridgeTransportClient.Shared\NSL.Node.BridgeTransportClient.Shared.csproj" />
+		<ProjectReference Include="..\NSL.Node.RoomServer.Shared\NSL.Node.RoomServer.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
