--- a/NSL.Node.RoomServer.Shared/NSL.Node.RoomServer.Shared.csproj
+++ b/NSL.Node.RoomServer.Shared/NSL.Node.RoomServer.Shared.csproj
@@ -16,6 +16,7 @@
 	  <DefineConstants>$(DefineConstants)TRACE;SERVER</DefineConstants>
 	</PropertyGroup>
 
+	<!--this link to files-->
 	<ItemGroup>
 		<Compile Include="..\..\Scripts\Game\Logic\**\*.cs" /> 
 	</ItemGroup>
