--- a/NSL.Node.RoomServer.Shared/NSL.Node.RoomServer.Shared.csproj
+++ b/NSL.Node.RoomServer.Shared/NSL.Node.RoomServer.Shared.csproj
@@ -29,17 +29,12 @@
 	  <DefineConstants>$(DefineConstants)TRACE;SERVER</DefineConstants>
 	</PropertyGroup>
 
-	<!--this link to files-->
-	<ItemGroup>
-		<Compile Include="..\..\Assets\Scripts\Network\**\*.cs" /> 
-	</ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="NSL.SocketCore" Version="2023.2.5.1332" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\NSL.Node.BridgeServer.Shared\NSL.Node.BridgeServer.Shared.csproj" />
+	  <ProjectReference Include="..\..\Assets\Scripts\Network\NSL.Node.RoomServer.Shared.Client.csproj" />
 	</ItemGroup>
 
 </Project>
