--- a/Examples/NSL.Node.BridgeServerExample/NSL.Node.BridgeServerExample.csproj
+++ b/Examples/NSL.Node.BridgeServerExample/NSL.Node.BridgeServerExample.csproj
@@ -1,24 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 
-	  <Version>$(VersionSuffix)</Version>
-	  <Authors>Relife87</Authors>
-	  <Configurations>Debug;Release;DebugExamples;ReleaseRoomServer</Configurations>
-  </PropertyGroup>
+		<Version>$(VersionSuffix)</Version>
+		<Authors>Relife87</Authors>
+		<Configurations>Debug;Release;DebugExamples</Configurations>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\NSL.Node.BridgeServer\NSL.Node.BridgeServer.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\NSL.Node.BridgeServer\NSL.Node.BridgeServer.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="configuration.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="configuration.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
