--- a/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
+++ b/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
-		<Configurations>Debug;Release;DebugExamples;ReleaseRoomServer;DebugRoomServer</Configurations>
+		<Configurations>Debug;Release</Configurations>
 
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -18,14 +18,6 @@
 
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
 		<PackageId>$(MSBuildProjectName)_Debug</PackageId>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)'=='DebugExamples'">
-	  <PackageId>$(MSBuildProjectName)_Debug</PackageId>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)'=='DebugRoomServer'">
-	  <PackageId>$(MSBuildProjectName)_Debug</PackageId>
 	</PropertyGroup>
 
 	<ItemGroup>
