--- a/NSL.Node.BridgeServer/NSL.Node.BridgeServer.csproj
+++ b/NSL.Node.BridgeServer/NSL.Node.BridgeServer.csproj
@@ -8,7 +8,7 @@
 		<IsPackable>false</IsPackable>
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
-		<Configurations>Debug;Release;DebugExamples;ReleaseRoomServer;DebugRoomServer</Configurations>
+		<Configurations>Debug;Release;DebugExamples</Configurations>
 	</PropertyGroup>
 
 	<ItemGroup>
