--- a/Examples/NSL.Node.RoomServerExample/configuration.json
+++ b/Examples/NSL.Node.RoomServerExample/configuration.json
@@ -1,5 +1,6 @@
 ﻿{
+  "bridge.address": "wss://localhost:7023/room_server",
   "client": {
-    "public.endpoint": "ws://localhost:5920"
+    "public.endpoint": "wss://localhost:7023/room_server"
   }
 }
