--- a/NSL.Node.BridgeServer/NSL.Node.BridgeServer.csproj
+++ b/NSL.Node.BridgeServer/NSL.Node.BridgeServer.csproj
@@ -1,18 +1,25 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
 		<TargetFramework>net7.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
 		<Configurations>Debug;Release;DebugExamples</Configurations>
+
+		<Version>$(VersionSuffix)</Version>
+		<Authors>Relife87</Authors>
+
+		<IsPackable>true</IsPackable>
+		<OutputType>Library</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2023.2.17.1357" />
 	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2023.2.17.1357" />
+	  <PackageReference Include="NSL.BuilderExtensions.WebSocketsServer.AspNet" Version="2023.2.17.1357" />
 	  <PackageReference Include="NSL.ConfigurationEngine" Version="2023.2.17.1357" />
 	  <PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2023.2.17.1357" />
 	  <PackageReference Include="NSL.Logger" Version="2023.2.17.1357" />
