--- a/Examples/NSL.Node.RoomServerExample/configuration.json
+++ b/Examples/NSL.Node.RoomServerExample/configuration.json
@@ -1,4 +1,4 @@
 ﻿{
-  "bridge_address": "wss://localhost:7016/room_server",
-  "client_public_endpoint": "ws://localhost:5920"
+  "bridge_address": "wss://eonrushmetaserver.azurewebsites.net/room_server",
+  "client_public_endpoint": "https://eonrushbattleserver.azurewebsites.net"
 }
