--- a/Examples/NSL.Node.RoomServerExample/Properties/launchSettings.json
+++ b/Examples/NSL.Node.RoomServerExample/Properties/launchSettings.json
@@ -1,9 +1,10 @@
 {
   "profiles": {
-    "NSL.Node.BridgeTransportExample": {
+    "NSL.Node.RoomServerExample": {
       "commandName": "Project",
       "environmentVariables": {
-        "transport__public__endpoint": "ws://localhost:5920"
+        "transport__public__endpoint": "ws://localhost:5920",
+        "client_binding_point": "http://localhost:5920/"
       }
     }
   }
