--- a/Examples/NSL.Node.RoomServerExample/configuration.json
+++ b/Examples/NSL.Node.RoomServerExample/configuration.json
@@ -1,4 +1,4 @@
 ﻿{
-  "bridge_address": "wss://localhost:7016/room_server",
+  "bridge_address": "ws://localhost:6998",
   "client_public_endpoint": "ws://localhost:5920"
 }
