--- a/NSL.Node.RoomServer.Shared/NSL.Node.RoomServer.Shared.csproj
+++ b/NSL.Node.RoomServer.Shared/NSL.Node.RoomServer.Shared.csproj
@@ -30,11 +30,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NSL.SocketCore" Version="2023.3.13.1326" />
+		<PackageReference Include="NSL.SocketCore" Version="2023.3.14.848" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Assets\Scripts\Network\Node\NSL.Node.RoomServer.Shared.Client.csproj" />
+	  <ProjectReference Include="..\..\..\..\Assets\Game\Networking\Node\NSL.Node.RoomServer.Shared.Client.csproj" />
 	</ItemGroup>
 
 </Project>
