--- a/Examples/NSL.Node.P2ProxyExample/NSL.Node.P2ProxyExample.csproj
+++ b/Examples/NSL.Node.P2ProxyExample/NSL.Node.P2ProxyExample.csproj
@@ -22,13 +22,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\NSL.Node.RoomServer\NSL.Node.RoomServer.csproj" />
+	  <ProjectReference Include="..\..\NSL.Node.P2Proxy\NSL.Node.P2Proxy.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="configuration.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
+		<None Update="configuration.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 </Project>
