--- a/Examples/NSL.Node.LocalRoomServerExample/Properties/launchSettings.json
+++ b/Examples/NSL.Node.LocalRoomServerExample/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "NSL.Node.LocalRoomServerExample": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:7087;http://localhost:5203",
       "environmentVariables": {
@@ -21,7 +21,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
