--- a/NSL.Node.P2Proxy/NSL.Node.P2Proxy.csproj
+++ b/NSL.Node.P2Proxy/NSL.Node.P2Proxy.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 
 		<Version>$(VersionSuffix)</Version>
@@ -37,7 +37,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\NSL.Node.RoomServer.Shared\NSL.Node.RoomServer.Shared.csproj" />
+	  <ProjectReference Include="..\NSL.Node.BridgeServer.Shared\NSL.Node.BridgeServer.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Include="NSL.Node.Core">
+	    <HintPath>..\NSL.Node.Core\NSL.Node.Core.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 </Project>
