--- a/Examples/NSL.Node.LocalRoomServerExample/Properties/launchSettings.json
+++ b/Examples/NSL.Node.LocalRoomServerExample/Properties/launchSettings.json
@@ -1,4 +1,22 @@
-﻿{
+{
+  "profiles": {
+    "NSL.Node.LocalRoomServerExample": {
+      "commandName": "Project",
+      "launchUrl": "weatherforecast",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:57183;http://localhost:5203"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchUrl": "weatherforecast",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    }
+  },
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -6,26 +24,6 @@
     "iisExpress": {
       "applicationUrl": "http://localhost:38348",
       "sslPort": 44314
-    }
-  },
-  "profiles": {
-    "NSL.Node.LocalRoomServerExample": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:7087;http://localhost:5203",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": false,
-      "launchUrl": "weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
     }
   }
 }
