--- a/Examples/NSL.Node.AspRoomServerExample/NSL.Node.AspRoomServerExample.csproj
+++ b/Examples/NSL.Node.AspRoomServerExample/NSL.Node.AspRoomServerExample.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Assets\Game\Shared\NSL.Node.RoomServer.Shared.Client.csproj" />
     <ProjectReference Include="..\..\NSL.Node.RoomServer.AspNetCore\NSL.Node.RoomServer.AspNetCore.csproj" />
     <ProjectReference Include="..\..\NSL.Node.RoomServer\NSL.Node.RoomServer.csproj" />
   </ItemGroup>
