--- a/NSL.Node.BridgeServer.Shared/NSL.Node.BridgeServer.Shared.csproj
+++ b/NSL.Node.BridgeServer.Shared/NSL.Node.BridgeServer.Shared.csproj
@@ -27,13 +27,23 @@
 		<TargetFramework>netstandard2.1</TargetFramework>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator" Version="2023.7.2.1403">
+	<ItemGroup Condition="'$(Configuration)'!='Unity' and '$(Configuration)'!='UnityDebug'">
+		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator" Version="2023.7.13.301">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator.Attributes" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.SocketCore" Version="2023.7.2.1403" />
+		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator.Attributes" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.SocketCore" Version="2023.7.13.301" />
+	</ItemGroup>
+
+
+	<ItemGroup Condition="'$(Configuration)'=='Unity' or '$(Configuration)'=='UnityDebug'">
+		<PackageReference Include="Unity.NSL.Generators.BinaryTypeIOGenerator" Version="2023.7.13.301">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Unity.NSL.Generators.BinaryTypeIOGenerator.Attributes" Version="2023.7.13.301" />
+		<PackageReference Include="Unity.NSL.SocketCore" Version="2023.7.13.301" />
 	</ItemGroup>
 
 </Project>
