--- a/NSL.Node.RoomServer.AspNetCore/NSL.Node.RoomServer.AspNetCore.csproj
+++ b/NSL.Node.RoomServer.AspNetCore/NSL.Node.RoomServer.AspNetCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
@@ -17,14 +17,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NSL.BuilderExtensions.LocalBridge" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer.AspNet" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.ConfigurationEngine" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.Logger" Version="2023.7.2.1403" />
-		<PackageReference Include="NSL.Logger.AspNetCore" Version="2023.7.2.1403" />
+		<PackageReference Include="NSL.BuilderExtensions.LocalBridge" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer.AspNet" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.ConfigurationEngine" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.Logger" Version="2023.7.13.301" />
+		<PackageReference Include="NSL.Logger.AspNetCore" Version="2023.7.13.301" />
 	</ItemGroup>
 
 	<ItemGroup>
