--- a/NSL.Node.RoomServer.AspNetCore/Properties/launchSettings.json
+++ b/NSL.Node.RoomServer.AspNetCore/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "NSL.Node.RoomServer.AspNetCore": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
