--- a/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
+++ b/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
@@ -21,7 +21,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="NSL.Logger.AspNetCore" Version="2024.4.21.1944" />
+	  <PackageReference Include="NSL.Logger.AspNet" Version="2024.5.21.1442" />
 	</ItemGroup>
 
 	<ItemGroup>
