--- a/NSL.Node.RoomServer/NSL.Node.RoomServer.csproj
+++ b/NSL.Node.RoomServer/NSL.Node.RoomServer.csproj
@@ -35,6 +35,8 @@
 		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2024.6.18.1240" />
 		<PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2024.6.18.1240" />
 		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2024.6.18.1240" />
+		<PackageReference Include="NSL.BuilderExtensions.TcpClient" Version="2024.6.18.1240" />
+		<PackageReference Include="NSL.BuilderExtensions.TcpServer" Version="2024.6.18.1240" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='UnityDebug' or '$(Configuration)'=='Unity'">
