--- a/Examples/NSL.Node.P2ProxyExample/NSL.Node.P2ProxyExample.csproj
+++ b/Examples/NSL.Node.P2ProxyExample/NSL.Node.P2ProxyExample.csproj
@@ -12,13 +12,13 @@
 
 		<IsPackable>false</IsPackable>
 
-		<Configurations>Debug;Release;DebugExamples;ReleaseRoomServer</Configurations>
+		<Configurations>Debug;Release;DebugExamples;ReleaseRoomServer;Dev</Configurations>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.Logger" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.UDP.Client" Version="2024.8.6.1532" />
+		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.Logger" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.UDP.Client" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 	<ItemGroup>
