--- a/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
+++ b/NSL.Node.BridgeLobbyClient.AspNetCore/NSL.Node.BridgeLobbyClient.AspNetCore.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<Configurations>Debug;Release</Configurations>
+		<Configurations>Debug;Release;Dev</Configurations>
 
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -20,8 +20,12 @@
 		<PackageId>$(MSBuildProjectName)_Debug</PackageId>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)'=='Dev'">
+	  <PackageId>$(MSBuildProjectName)_Debug</PackageId>
+	</PropertyGroup>
+
 	<ItemGroup>
-	  <PackageReference Include="NSL.Logger.AspNet" Version="2024.8.6.1532" />
+	  <PackageReference Include="NSL.Logger.AspNet" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 	<ItemGroup>
