--- a/NSL.Node.BridgeServer.Shared/NSL.Node.BridgeServer.Shared.csproj
+++ b/NSL.Node.BridgeServer.Shared/NSL.Node.BridgeServer.Shared.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<Configurations>Debug;Release;UnityDebug;Unity;DebugExamples</Configurations>
+		<Configurations>Debug;Release;UnityDebug;Unity;DebugExamples;Dev;Dev</Configurations>
 
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
@@ -10,6 +10,10 @@
 
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
 		<PackageId>$(MSBuildProjectName)_Debug</PackageId>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)'=='Dev'">
+	  <PackageId>$(MSBuildProjectName)_Debug</PackageId>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='DebugExamples'">
@@ -28,22 +32,22 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(Configuration)'!='Unity' and '$(Configuration)'!='UnityDebug'">
-		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator" Version="2024.8.6.1532">
+		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator" Version="2024.10.4.1349">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator.Attributes" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.SocketCore" Version="2024.8.6.1532" />
+		<PackageReference Include="NSL.Generators.BinaryTypeIOGenerator.Attributes" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.SocketCore" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 
 	<ItemGroup Condition="'$(Configuration)'=='Unity' or '$(Configuration)'=='UnityDebug'">
-		<PackageReference Include="Unity.NSL.Generators.BinaryTypeIOGenerator" Version="2024.8.6.1532">
+		<PackageReference Include="Unity.NSL.Generators.BinaryTypeIOGenerator" Version="2024.10.4.1349">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Unity.NSL.Generators.BinaryTypeIOGenerator.Attributes" Version="2024.8.6.1532" />
-		<PackageReference Include="Unity.NSL.SocketCore" Version="2024.8.6.1532" />
+		<PackageReference Include="Unity.NSL.Generators.BinaryTypeIOGenerator.Attributes" Version="2024.10.4.1349" />
+		<PackageReference Include="Unity.NSL.SocketCore" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 </Project>
