--- a/NSL.Node.P2Proxy/NSL.Node.P2Proxy.csproj
+++ b/NSL.Node.P2Proxy/NSL.Node.P2Proxy.csproj
@@ -6,7 +6,7 @@
 
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
-		<Configurations>Debug;Release;DebugExamples;ReleaseRoomServer;DebugRoomServer</Configurations>
+		<Configurations>Debug;Release;DebugExamples;ReleaseRoomServer;DebugRoomServer;Dev</Configurations>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -30,10 +30,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NSL.BuilderExtensions.UDPServer" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.Logger" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.SocketCore" Version="2024.8.6.1532" />
+		<PackageReference Include="NSL.BuilderExtensions.UDPServer" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.Logger" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.SocketCore" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 	<ItemGroup>
