--- a/NSL.Node.RoomServer.AspNetCore/NSL.Node.RoomServer.AspNetCore.csproj
+++ b/NSL.Node.RoomServer.AspNetCore/NSL.Node.RoomServer.AspNetCore.csproj
@@ -7,7 +7,7 @@
 		<Nullable>enable</Nullable>
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
-		<Configurations>Debug;Release;DebugExamples</Configurations>
+		<Configurations>Debug;Release;DebugExamples;Dev</Configurations>
 
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
@@ -17,14 +17,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NSL.BuilderExtensions.LocalBridge" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer.AspNet" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.ConfigurationEngine" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.Logger" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.Logger.AspNet" Version="2024.8.6.1532" />
+		<PackageReference Include="NSL.BuilderExtensions.LocalBridge" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer.AspNet" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.ConfigurationEngine" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.Logger" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.Logger.AspNet" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 	<ItemGroup>
