--- a/NSL.Node.RoomServer/NSL.Node.RoomServer.csproj
+++ b/NSL.Node.RoomServer/NSL.Node.RoomServer.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<Configurations>Debug;Release;UnityDebug;Unity;DebugExamples;ReleaseRoomServer;DebugRoomServer</Configurations>
+		<Configurations>Debug;Release;UnityDebug;Unity;DebugExamples;ReleaseRoomServer;DebugRoomServer;Dev</Configurations>
 
 		<Version>$(VersionSuffix)</Version>
 		<Authors>Relife87</Authors>
@@ -32,26 +32,26 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(Configuration)'!='UnityDebug' and '$(Configuration)'!='Unity'">
-		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.TcpClient" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.TcpServer" Version="2024.8.6.1532" />
+		<PackageReference Include="NSL.BuilderExtensions.SocketCore" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsClient" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.TcpClient" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.TcpServer" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(Configuration)'=='UnityDebug' or '$(Configuration)'=='Unity'">
-		<PackageReference Include="Unity.NSL.BuilderExtensions.SocketCore" Version="2022.12.2.526" />
-		<PackageReference Include="Unity.NSL.BuilderExtensions.WebSocketsClient" Version="2022.12.2.526" />
-		<PackageReference Include="Unity.NSL.BuilderExtensions.WebSocketsServer" Version="2022.12.2.526" />
+		<PackageReference Include="Unity.NSL.BuilderExtensions.SocketCore" Version="2024.10.4.1349" />
+		<PackageReference Include="Unity.NSL.BuilderExtensions.WebSocketsClient" Version="2024.10.4.1349" />
+		<PackageReference Include="Unity.NSL.BuilderExtensions.WebSocketsServer" Version="2024.10.4.1349" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NSL.BuilderExtensions.LocalBridge" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer.AspNet" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.Extensions.Session.Server" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.Logger" Version="2024.8.6.1532" />
-		<PackageReference Include="NSL.UDP.Client" Version="2024.8.6.1532" />
+		<PackageReference Include="NSL.BuilderExtensions.LocalBridge" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.BuilderExtensions.WebSocketsServer.AspNet" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.ConfigurationEngine.Providers.Json" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.Extensions.Session.Server" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.Logger" Version="2024.10.4.1349" />
+		<PackageReference Include="NSL.UDP.Client" Version="2024.10.4.1349" />
 		<PackageReference Include="STUN" Version="0.5.0" />
 	</ItemGroup>
 
